--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -68,7 +68,7 @@ body {
   line-height: 1.5;
   color: #343a40;
   text-align: left;
-  background-color: white !important;
+  background-color: #fff;
 }
 
 [tabindex="-1"]:focus {
@@ -374,7 +374,6 @@ h1, h2, h3, h4, h5, h6,
 h1, .h1 {
   font-size: 2.5rem;
 }
-
 
 h2, .h2 {
   font-size: 2rem;
