updates the about

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -11,23 +11,8 @@
   background-color: #1a1a1a !important;
 }
 
-.section-footer h6 {
-  font-weight: 600;
-  letter-spacing: 0.5px;
-  font-size: 16px;
-  margin-bottom: 18px !important;
-  position: relative;
-  padding-bottom: 8px;
-}
-
 .section-footer h6:after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 40px;
-  height: 2px;
-  background-color: #d4af37;
+  content: none;
 }
 
 .section-footer ul li {
